config/cluster/cephService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-service
  namespace: ceph
spec:
  type: ExternalName
  externalName: my.database.example.com
