config/cluster/cephIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ceph-ingress
  namespace: ceph
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ceph.southern.podzone.net
    secretName: ceph-cert
  rules:
  - host: ceph.southern.podzone.net
    http:
      paths:
      - backend:
         service:
           name: kubernetes
           port:
             number: 443
        path: /
        pathType: Prefix
